--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node_modules/.bin/electron ."
   },
   "author": "",
-  "license": "MIT",
+  "license": "GPL",
   "devDependencies": {
     "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.5"
