--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
   "scripts": {
     "start": "node_modules/.bin/electron .",
     "test": "echo \"Warning: no test specified\"",
-
     "release:win": "powershell -Command \"Remove-Item -r -Force ./dist\" && build --win --ia32",
     "release:mac": "rm -rf ./dist && build --mac --x64"
   },
   "build": {
     "appId": "org.sadapon2008.gauth-electron",
-    "dmg" : {
+    "dmg": {
       "background": "assets/osx/icon.png",
       "icon": "assets/osx/icon.icns",
       "icon-size": 80,
       "contents": [
-        { "x": 438, "y": 344, "type": "link", "path": "/Applications" },
-        { "x": 192, "y": 344, "type": "file" }
+        {
+          "x": 438,
+          "y": 344,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 192,
+          "y": 344,
+          "type": "file"
+        }
       ]
     },
-    "win" : {
-      "icon" : "assets/win/icon.ico"
+    "win": {
+      "icon": "assets/win/icon.ico"
     }
   },
   "keywords": [],
@@ -32,5 +40,8 @@
     "electron-builder": "^7.15.2",
     "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.5"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
