--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node_modules/.bin/electron .",
     "test": "echo \"Warning: no test specified\"",
     "release:win": "powershell -Command \"Remove-Item -r -Force ./dist\" && build --win --ia32",
-    "release:mac": "rm -rf ./dist && build --mac --x64"
+    "release:mac": "rm -rf ./dist && build --mac --x64 --publish never"
   },
   "build": {
     "appId": "org.sadapon2008.gauth-electron",
